tests/fixtures/invalid/list_bitnot.py
# Cannot use bitwise NOT on List[int]
x: list[int] = [1, 2, 3]
y: int = ~x
